[bump] new year

--- a/_includes/_base/footer.html
+++ b/_includes/_base/footer.html
@@ -1,3 +1,10 @@
 <!-- Footer -->
 <footer>
+    <div class="footer-symbol">
+        τ
+    </div>
+
+    <div class="pl-2 copyright">
+        <p>©2022 - Jon Tow
+    </div>
 </footer>
