--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -4,22 +4,28 @@
     style="font-size: 1.35em;"
     href="{{site.url}}"
   >
-    <a href="{{site.url}}" style="color: var(--name-color);"><h2>Jon Tow</h2></a>
+    <a href="{{site.url}}" style="color: var(--name-color);">
+        <h2>Jon Tow</h2>
+    </a>
   </span>
 
-  <div class="navbar navbar-expand">
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <p>
-        <a href="{{site.url}}#about">
-          <span class="about-nav">about</span>
+  <div class="navbar">
+      <p class="navbar-p">
+        <a href="{{site.url}}#about" style="margin-right: 4px;">
+          <span class="about-nav">
+            about
+          </span>
         </a>
-        <a class="ml-2" href="{{site.url}}#project">
-          <span class="projects-nav">projects</span>
+        <a class="" href="{{site.url}}#project" style="margin-right: 4px;">
+          <span class="projects-nav">
+            projects
+          </span>
         </a>
-        <a class="ml-2" href="{{site.url}}#notes">
-          <span class="notes-nav">notes</span>
+        <a class="" href="{{site.url}}#notes" style="margin-right: 4px;">
+          <span class="notes-nav">
+            notes
+          </span>
         </a>
       </p>
-    </div>
   </div>
 </nav>
