--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,45 +1,43 @@
 <section id="about">
+
   <div class="section-header">
-    <h1 class="section-h2">
-      <p>About</p>
-    </h1>
+    <h2 class="section-h2">
+      About
+    </h2>
   </div>
 
   <!-- Content -->
   <div class="section-content">
-
-    <!-- Bio Row -->
-    <p style="text-align: justify;">
-      <span style="color: var(--header-type)">CS @ Stony Brook University</span>
-      <br>
-      <br>
+    <h3>
+      <span style="color: var(--header-type);">
+        CS @ Stony Brook University
+      </span>
+    </h3>
+    <p style="padding-top: 0.75em;">
       Welcome to my page. My name is Jon Tow (pronounced like the Greek letter τ,
       not like tow-truck &#128513;). I enjoy coding, tinkering with machine learning models,
       and competing in amateur sporting events.
       <br>
     </p>
-    <!-- End of Bio Row -->
-
     <p>
       I also take up some server space over in these parts:
-
-      <ul class="social-media-list">
-        <li style="padding-bottom: .325em;">
-          <a class="" href="https://github.com/jon-tow">
-            <span class="about-nav">github</span>
-          </a>
-        </li>
-        <li style="padding-bottom: .325em;">
-          <a class="" href="https://twitter.com/jonbtow">
-            <span class="about-nav">twitter</span>
-          </a>
-        </li>
-        <li>
-          <a class="" href="jonathantow1@gmail.com">
-            <span class="about-nav">jonathantow1 at gmail</span>
-          </a>
-        </li>
-      </ul>
+    <ul class="social-media-list">
+      <li style="padding-bottom: .325em;">
+        <a class="" href="https://github.com/jon-tow">
+          <span class="minor-nav">github</span>
+        </a>
+      </li>
+      <li style="padding-bottom: .325em;">
+        <a class="" href="https://twitter.com/jonbtow">
+          <span class="minor-nav">twitter</span>
+        </a>
+      </li>
+      <li>
+        <a class="" href="jonathantow1@gmail.com">
+          <span class="minor-nav">jonathantow1 at gmail</span>
+        </a>
+      </li>
+    </ul>
     </p>
   </div>
 </section>
