--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -1,114 +1,121 @@
 <section id="project">
   <div class="section-header">
-    <h1 class="section-h2">
-      <p>Projects</p>
-    </h1>
+    <h2 class="section-h3">
+      Projects
+    </h2>
   </div>
 
   <div class="section-content">
 
 
-    <div class="project-type mb-2 pt-2">
-      <h3>Playground</h3>
-      <p>I sometimes write javascript when I'm bored. Everyone has their vices.</p>
-    </div>
-    <div class="project-row row pl-0">
-      <div class="project-item col-sm">
-        <h4>
-          <a href="projects/impossible-tic-tac-toe/index.html">
-            <span class="projects-nav">Impossible Tic-Tac-Toe</span>
-          </a>
-        </h4>
-        <p>
-          A minimax implementation for deciding the best moves in a tic-tac-toe
-          game.
-          <br />
-          <a class="github-link third-color" href="https://github.com/jon-tow/impossible-tic-tac-toe">
-            <span class="minor-nav">github</span>
-          </a>
-        </p>
+
+    <div class="project-row">
+      <div class="project-type">
+        <h3>Playground</h3>
       </div>
-      <div class="project-item col-sm">
-        <h4>
-          <a href="projects/sudoku-solver/index.html">
-            <span class="projects-nav">Sudoku Solver</span>
-          </a>
-        </h4>
-        <p>
-          A sudoku solver implemented with backtracking.
-          <br />
-          <a class="github-link third-color" href="https://github.com/jon-tow/sudoku-solver">
-            <span class="minor-nav">github</span>
-          </a>
-        </p>
-      </div>
-    </div>
-    <div class="project-row row pl-0">
-      <div class="project-item col-sm">
-        <h4>
-          <a href="projects/maze-solver/index.html">
-            <span class="projects-nav">Maze Solver</span>
-          </a>
-        </h4>
-        <p>
-          A visualization of the basic uninformed search algorithms, depth-first
-          and breadth-first. <br />
-          <a class="github-link third-color" href="https://github.com/jon-tow/maze-solver">
-            <span class="minor-nav">github</span>
-          </a>
-        </p>
-      </div>
-      <div class="project-item col-sm">
-        <h4>
-          <a href="projects/cell-automaton/index.html">
-            <span class="projects-nav">Cell-Automaton</span>
-          </a>
-        </h4>
-        <p>
-          A simple implementation of Conway's Game of Life. Looking to implement rulesets
-          for other cellular automaton in the future.
-          <br />
-        </p>
-      </div>
+      <div class="project-content">
+        <div class="project-item">
+          <h4>
+            <a href="projects/impossible-tic-tac-toe/index.html">
+              <span class="minor-nav">Impossible Tic-Tac-Toe</span>
+            </a>
+          </h4>
+          <p>
+            A minimax implementation for deciding the best moves in a tic-tac-toe
+            game.
+            <br />
+            <a class="github-link third-color" href="https://github.com/jon-tow/impossible-tic-tac-toe">
+              <span class="minor-nav">
+                github
+              </span>
+            </a>
+          </p>
+        </div>
+
+        <div class="project-item">
+          <h4>
+            <a href="projects/sudoku-solver/index.html">
+              <span class="minor-nav">Sudoku Solver</span>
+            </a>
+          </h4>
+          <p>
+            A sudoku solver implemented with backtracking.
+            <br />
+            <a class="github-link third-color" href="https://github.com/jon-tow/sudoku-solver">
+              <span class="minor-nav">github</span>
+            </a>
+          </p>
+        </div>
+
+        <div class="project-item">
+          <h4>
+            <a href="projects/maze-solver/index.html">
+              <span class="minor-nav">Maze Solver</span>
+            </a>
+          </h4>
+          <p>
+            A visualization of the basic uninformed search algorithms, depth-first
+            and breadth-first. <br />
+            <a class="github-link third-color" href="https://github.com/jon-tow/maze-solver">
+              <span class="minor-nav">github</span>
+            </a>
+          </p>
+        </div>
+
+        <div class="project-item">
+          <h4>
+            <a href="projects/cell-automaton/index.html">
+              <span class="minor-nav">Cell-Automaton</span>
+            </a>
+          </h4>
+          <p>
+            A simple implementation of Conway's Game of Life. Looking to implement rulesets
+            for other cellular automaton in the future.
+            <br />
+          </p>
+        </div>
+      </div> <!-- End of row-->
     </div>
 
-
-    <div class="project-type mt-2 mb-2 pt-2">
-      <h3>Language</h3>
-    </div>
-    <div class="project-row row pl-0">
-      <div class="project-item col-sm">
-        <h4>
-          <a href="https://github.com/jon-tow/lispp">
-            <span class="projects-nav">Lispp</span>
-          </a>
-        </h4>
-        <p>
-          A little LISP interpreter built with Modern C++.
-          <br />
-          <a class="github-link third-color" href="https://github.com/jon-tow/lispp">
-            <span class="minor-nav">github</span>
-          </a>
-        </p>
+    <div class="project-row">
+      <div class="project-type">
+        <h3>Language</h3>
       </div>
-      <div class="project-item col-sm"></div>
-    </div>
 
-
-    <div class="project-type mt-2 mb-2 pt-2">
-      <h3>Volunteer/Community</h3>
-    </div>
-    <div class="project-row row pl-0">
-      <div class="project-item col-sm">
-        <h4>
-          <a href="https://icml.cc/">
-            <span class="projects-nav">ICML 2020</span>
-          </a>
-        </h4>
+      <div class="project-content">
+        <div class="project-item">
+          <h4>
+            <a href="https://github.com/jon-tow/lispp">
+              <span class="minor-nav">Lispp</span>
+            </a>
+          </h4>
+          <p>
+            A little LISP interpreter built with Modern C++.
+            <br />
+            <a class="github-link third-color" href="https://github.com/jon-tow/lispp">
+              <span class="minor-nav">github</span>
+            </a>
+          </p>
+        </div>
+        <div class="project-item"></div>
       </div>
-      <div class="project-item col-sm"></div>
-    </div>
+    </div> <!-- End of row-->
 
-
+    <div class="project-row">
+      <div class="project-type">
+        <h3>Volunteer/Community</h3>
+      </div>
+      <div class="project-content">
+        <div class="project-item">
+          <h4>
+            <a href="https://icml.cc/">
+              <span class="minor-nav">ICML 2020</span>
+            </a>
+          </h4>
+        </div>
+        <div class="project-item"></div>
+      </div>
+    </div> <!-- End of row-->
   </div>
+
 </section>
