--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,13 +40,14 @@
   </head>
 
   <body>
-    <div class="wrapper">
       <main>
+        
         <div class="post">
+
           <div class="post-title">
             <table>
               <tr>
-                <td> <span class="bold">Title</span> </td>
+                <td><span class="bold">Title</span> </td>
                 <td>
                   <span class="bold third-color">
                     <em>{{ page.title }}</em>
@@ -54,10 +55,8 @@
                 </td>
               </tr>
               <tr>
-                <td> <span class="bold">Author</span> </td>
-                <td>
-                  Jonathan Tow
-                </td>
+                <td><span class="bold">Author</span></td>
+                <td>Jonathan Tow</td>
               </tr>
               <tr>
                 <td> <span class="bold">Date</span> </td>
@@ -94,7 +93,8 @@
             <p>{{ content }}</p>
           </div>
         </div>
-    </div>
+
     </main>
+    <footer></footer>
   </body>
 </html>
